# docxlib

./: .clang-format  .gitignore  .mailmap  CMakeLists.txt  README.md
include/: document.h  enum.h  enumtext.h  length.h  shape.h  table.h  text.h
src/: document.cpp  enumtext.cpp  length.cpp  package.cpp  package.h  shape.cpp  shared.cpp  shared.h  table.cpp  text.cpp
src/image/: image.cpp  image.h
src/opc/: constants.h  contenttypemap.cpp  contenttypemap.h  coreproperties.cpp  coreproperties.h  opcpackage.cpp  opcpackage.h  oxml.cpp  oxml.h  packagereader.cpp  packagereader.h  packagewriter.cpp  packagewriter.h  packuri.cpp  packuri.h  part.cpp  part.h  physpkgreader.cpp  physpkgreader.h  physpkgwriter.cpp  physpkgwriter.h  rel.cpp  rel.h  serializedrelationships.cpp  serializedrelationships.h
src/opc/parts/: corepropertiespart.cpp  corepropertiespart.h
src/oxml/: oxmlshape.cpp  oxmlshape.h  oxmltable.cpp  oxmltable.h  oxmltext.cpp  oxmltext.h  xmlchemy.cpp  xmlchemy.h
src/parts/: documentpart.cpp  documentpart.h  imagepart.cpp  imagepart.h
tests/: CMakeLists.txt
